--- a/templates/includes/main_navbar.html
+++ b/templates/includes/main_navbar.html
@@ -23,6 +23,9 @@
       <li class="navbar__item">
         <a href="#" class="navbar__link"><i data-feather="settings"></i><span>Settings</span></a>        
       </li>
+      <li class="navbar__item">
+        <a href="{% url 'account_logout' %}" class="navbar__link"><i data-feather="log-out"></i><span>Logout</span></a>        
+      </li>
     </ul>
   </nav>
   <script src="https://unpkg.com/feather-icons"></script>
